@@ -67,10 +67,9 @@ describe 'sudo' do
 
         context 'should create sudo::include_dir resources with an iterator' do
           let(:hieradata) { 'sudo__include_dirs' }
-          is { is_expected.to create_sudo__include_dir('/etc/sudoers.d')
-          is { is_expected.to create_sudo__include_dir('/etc/simp_sudoers.d')
-          }
-        }
+          is { is_expected.to create_sudo__include_dir('/etc/sudoers.d') }
+          is { is_expected.to create_sudo__include_dir('/etc/simp_sudoers.d') }
+        end
       end
     end
   end
